# hohotach-bot

./: .env.sample  docker-compose.yml
api/: Dockerfile  db.py  entrypoint.sh  logger.py  main.py  models.py  pyproject.toml  settings.py
api/api/v1/: reactions.py  recommendation.py
bot/: Dockerfile  api.py  main.py  models.py  pyproject.toml
parsers/: groups.json  main.py  pyproject.toml  scrapy.cfg
parsers/odnoklassniki_parser/: database.py  items.py  middlewares.py  pipelines.py  settings.py
parsers/odnoklassniki_parser/spiders/: spider.py
