[tool.poetry]
name = "api"
version = "1.0.0"
description = "API recommends memes for hohotach_bot"
authors = ["Ivan Nedobezhkin <inedobezkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
orjson = "^3.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
