[tool.poetry]
name = "bot"
version = "1.0.0"
description = "Telegram memes bot"
authors = ["Ivan Nedobezhkin <inedobezkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
